Clean up notebooks

--- a/notebooks/chebi-mappings.ipynb
+++ b/notebooks/chebi-mappings.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "cfa741d8",
    "metadata": {
     "scrolled": true
@@ -30,10 +30,10 @@
     "import pystow\n",
     "from biomappings.gilda_utils import iter_prediction_tuples\n",
     "from gilda.process import normalize\n",
-    "from tqdm.auto import tqdm\n",
     "from IPython.display import Markdown\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
-    "from chembl_downloader import queries, query, latest"
+    "from chembl_downloader import latest, queries, query"
    ]
   },
   {
@@ -64,7 +64,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Nov  3 12:53:35 2022\n"
+      "Thu Nov  3 13:32:50 2022\n"
      ]
     }
    ],
@@ -151,8 +151,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3 µs, sys: 1e+03 ns, total: 4 µs\n",
-      "Wall time: 6.91 µs\n"
+      "CPU times: user 2 µs, sys: 1e+03 ns, total: 3 µs\n",
+      "Wall time: 5.96 µs\n"
      ]
     }
    ],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d1304a8",
+   "id": "8d9be11f",
    "metadata": {},
    "source": [
     "## What's Already in ChEBI\n",
@@ -292,43 +292,67 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a0dfc359",
+   "id": "9d196b15",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pystow' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m chebi_url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://ftp.ebi.ac.uk/pub/databases/chebi/Flat_file_tab_delimited/reference.tsv.gz\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m chebi_df \u001b[38;5;241m=\u001b[39m \u001b[43mpystow\u001b[49m\u001b[38;5;241m.\u001b[39mensure_df(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbio\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mchebi\u001b[39m\u001b[38;5;124m\"\u001b[39m, url\u001b[38;5;241m=\u001b[39mchebi_url)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pystow' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cthoyt/.virtualenvs/cheminf310/lib/python3.10/site-packages/pystow/impl.py:599: DtypeWarning: Columns (1,3,4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  return pd.read_csv(path, **_clean_csv_kwargs(read_csv_kwargs))\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "34312"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "chebi_url = \"https://ftp.ebi.ac.uk/pub/databases/chebi/Flat_file_tab_delimited/reference.tsv.gz\"\n",
-    "chebi_df = pystow.ensure_df(\"bio\", \"chebi\", url=chebi_url)\n",
-    "\n",
-    "# TODO slice to only have chembl sources then remove unnecessary columns\n",
-    "\n",
-    "#: keys are chembl IDs, values are chebi IDs\n",
-    "chebi_mappings = ..."
+    "chebi_df = pystow.ensure_csv(\n",
+    "    \"bio\",\n",
+    "    \"chebi\",\n",
+    "    url=chebi_url,\n",
+    "    read_csv_kwargs=dict(\n",
+    "        compression=\"gzip\",\n",
+    "        sep=\"\\t\",\n",
+    "        encoding=\"unicode_escape\",\n",
+    "        on_bad_lines=\"skip\",\n",
+    "    ),\n",
+    ")\n",
+    "chebi_mappings = dict(\n",
+    "    chebi_df[chebi_df.REFERENCE_DB_NAME == \"ChEMBL\"][[\"REFERENCE_ID\", \"COMPOUND_ID\"]].values\n",
+    ")\n",
+    "len(chebi_mappings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5cc8e295",
+   "execution_count": 9,
+   "id": "397d2fd1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 4,041/39,230 (10.30%)  extra mappings from ChEBI\n"
+     ]
+    }
+   ],
    "source": [
     "chebi_idx = df.chembl_id.isin(set(chebi_mappings))\n",
     "\n",
     "print(\n",
     "    f\"there are {chebi_idx.sum():,}/{len(df.index):,} ({chebi_idx.sum()/len(df.index):.2%}) \"\n",
-    "    \" extra mappings from ChEBI\"\n",
+    "    f\"extra mappings from ChEBI\"\n",
     ")\n",
     "\n",
     "df = df[~chebi_idx]"
@@ -346,10 +370,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d87f8e43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c05aef5cbe44501938ec88d5fe86ffb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0.00/35.2k [00:00<?, ?term/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "terms = [\n",
     "    gilda.term.Term(\n",
@@ -384,10 +423,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "737427eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: [2022-11-03 13:33:06] bioversions.sources.ols - [ypo] Missing information in OLS\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2feac003a15d478cbce97a95923aa6ee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "[chebi] gilda tuples:   0%|          | 0.00/163k [00:00<?, ?name/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "prediction_tuples = list(\n",
     "    iter_prediction_tuples(\n",
@@ -400,10 +461,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b01f8e7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got 1,921 predictions\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Got {len(prediction_tuples):,} predictions\")"
    ]
@@ -420,10 +489,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2dd1fc6a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>source_prefix</th>\n",
+       "      <th>source_id</th>\n",
+       "      <th>source_name</th>\n",
+       "      <th>relation</th>\n",
+       "      <th>target_prefix</th>\n",
+       "      <th>target_identifier</th>\n",
+       "      <th>target_name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>chebi</td>\n",
+       "      <td>CHEBI:190867</td>\n",
+       "      <td>1-AMINOCYCLOBUTANE CARBOXYLIC ACID</td>\n",
+       "      <td>skos:exactMatch</td>\n",
+       "      <td>chembl.compound</td>\n",
+       "      <td>CHEMBL131244</td>\n",
+       "      <td>1-AMINOCYCLOBUTANE CARBOXYLIC ACID</td>\n",
+       "      <td>lexical</td>\n",
+       "      <td>0.777778</td>\n",
+       "      <td>notebook</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>904</th>\n",
+       "      <td>chebi</td>\n",
+       "      <td>CHEBI:34827</td>\n",
+       "      <td>M2</td>\n",
+       "      <td>skos:exactMatch</td>\n",
+       "      <td>chembl.compound</td>\n",
+       "      <td>CHEMBL4525134</td>\n",
+       "      <td>M2</td>\n",
+       "      <td>lexical</td>\n",
+       "      <td>0.777778</td>\n",
+       "      <td>notebook</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>927</th>\n",
+       "      <td>chebi</td>\n",
+       "      <td>CHEBI:35811</td>\n",
+       "      <td>2-endo-hydroxy-1,8-cineole</td>\n",
+       "      <td>skos:exactMatch</td>\n",
+       "      <td>chembl.compound</td>\n",
+       "      <td>CHEMBL2229602</td>\n",
+       "      <td>2-endo-hydroxy-1,8-cineole</td>\n",
+       "      <td>lexical</td>\n",
+       "      <td>0.777778</td>\n",
+       "      <td>notebook</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>443</th>\n",
+       "      <td>chebi</td>\n",
+       "      <td>CHEBI:188062</td>\n",
+       "      <td>XYLOCARPUS A</td>\n",
+       "      <td>skos:exactMatch</td>\n",
+       "      <td>chembl.compound</td>\n",
+       "      <td>CHEMBL3039346</td>\n",
+       "      <td>XYLOCARPUS A</td>\n",
+       "      <td>lexical</td>\n",
+       "      <td>0.777778</td>\n",
+       "      <td>notebook</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>574</th>\n",
+       "      <td>chebi</td>\n",
+       "      <td>CHEBI:192723</td>\n",
+       "      <td>L-NIO</td>\n",
+       "      <td>skos:exactMatch</td>\n",
+       "      <td>chembl.compound</td>\n",
+       "      <td>CHEMBL11471</td>\n",
+       "      <td>L-NIO</td>\n",
+       "      <td>lexical</td>\n",
+       "      <td>0.777778</td>\n",
+       "      <td>notebook</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>852</th>\n",
+       "      <td>chebi</td>\n",
+       "      <td>CHEBI:32187</td>\n",
+       "      <td>Technetium Tc 99m succimer</td>\n",
+       "      <td>skos:exactMatch</td>\n",
+       "      <td>chembl.compound</td>\n",
+       "      <td>CHEMBL1200797</td>\n",
+       "      <td>TECHNETIUM TC 99M SUCCIMER</td>\n",
+       "      <td>lexical</td>\n",
+       "      <td>0.723974</td>\n",
+       "      <td>notebook</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1182</th>\n",
+       "      <td>chebi</td>\n",
+       "      <td>CHEBI:5938</td>\n",
+       "      <td>Interferon beta-1b</td>\n",
+       "      <td>skos:exactMatch</td>\n",
+       "      <td>chembl.compound</td>\n",
+       "      <td>CHEMBL1201563</td>\n",
+       "      <td>INTERFERON BETA-1B</td>\n",
+       "      <td>lexical</td>\n",
+       "      <td>0.723974</td>\n",
+       "      <td>notebook</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1183</th>\n",
+       "      <td>chebi</td>\n",
+       "      <td>CHEBI:5939</td>\n",
+       "      <td>Interferon gamma-1b</td>\n",
+       "      <td>skos:exactMatch</td>\n",
+       "      <td>chembl.compound</td>\n",
+       "      <td>CHEMBL1201564</td>\n",
+       "      <td>INTERFERON GAMMA-1B</td>\n",
+       "      <td>lexical</td>\n",
+       "      <td>0.723974</td>\n",
+       "      <td>notebook</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1892</th>\n",
+       "      <td>chebi</td>\n",
+       "      <td>CHEBI:9423</td>\n",
+       "      <td>Technetium tc 99m sestamibi</td>\n",
+       "      <td>skos:exactMatch</td>\n",
+       "      <td>chembl.compound</td>\n",
+       "      <td>CHEMBL4594241</td>\n",
+       "      <td>TECHNETIUM TC 99M SESTAMIBI</td>\n",
+       "      <td>lexical</td>\n",
+       "      <td>0.723974</td>\n",
+       "      <td>notebook</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1181</th>\n",
+       "      <td>chebi</td>\n",
+       "      <td>CHEBI:5937</td>\n",
+       "      <td>Interferon alfa-2a</td>\n",
+       "      <td>skos:exactMatch</td>\n",
+       "      <td>chembl.compound</td>\n",
+       "      <td>CHEMBL2108508</td>\n",
+       "      <td>INTERFERON ALFA-2A</td>\n",
+       "      <td>lexical</td>\n",
+       "      <td>0.723974</td>\n",
+       "      <td>notebook</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1921 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     source_prefix     source_id                         source_name  \\\n",
+       "497          chebi  CHEBI:190867  1-AMINOCYCLOBUTANE CARBOXYLIC ACID   \n",
+       "904          chebi   CHEBI:34827                                  M2   \n",
+       "927          chebi   CHEBI:35811          2-endo-hydroxy-1,8-cineole   \n",
+       "443          chebi  CHEBI:188062                        XYLOCARPUS A   \n",
+       "574          chebi  CHEBI:192723                               L-NIO   \n",
+       "...            ...           ...                                 ...   \n",
+       "852          chebi   CHEBI:32187          Technetium Tc 99m succimer   \n",
+       "1182         chebi    CHEBI:5938                  Interferon beta-1b   \n",
+       "1183         chebi    CHEBI:5939                 Interferon gamma-1b   \n",
+       "1892         chebi    CHEBI:9423         Technetium tc 99m sestamibi   \n",
+       "1181         chebi    CHEBI:5937                  Interferon alfa-2a   \n",
+       "\n",
+       "             relation    target_prefix target_identifier  \\\n",
+       "497   skos:exactMatch  chembl.compound      CHEMBL131244   \n",
+       "904   skos:exactMatch  chembl.compound     CHEMBL4525134   \n",
+       "927   skos:exactMatch  chembl.compound     CHEMBL2229602   \n",
+       "443   skos:exactMatch  chembl.compound     CHEMBL3039346   \n",
+       "574   skos:exactMatch  chembl.compound       CHEMBL11471   \n",
+       "...               ...              ...               ...   \n",
+       "852   skos:exactMatch  chembl.compound     CHEMBL1200797   \n",
+       "1182  skos:exactMatch  chembl.compound     CHEMBL1201563   \n",
+       "1183  skos:exactMatch  chembl.compound     CHEMBL1201564   \n",
+       "1892  skos:exactMatch  chembl.compound     CHEMBL4594241   \n",
+       "1181  skos:exactMatch  chembl.compound     CHEMBL2108508   \n",
+       "\n",
+       "                             target_name     type  confidence    source  \n",
+       "497   1-AMINOCYCLOBUTANE CARBOXYLIC ACID  lexical    0.777778  notebook  \n",
+       "904                                   M2  lexical    0.777778  notebook  \n",
+       "927           2-endo-hydroxy-1,8-cineole  lexical    0.777778  notebook  \n",
+       "443                         XYLOCARPUS A  lexical    0.777778  notebook  \n",
+       "574                                L-NIO  lexical    0.777778  notebook  \n",
+       "...                                  ...      ...         ...       ...  \n",
+       "852           TECHNETIUM TC 99M SUCCIMER  lexical    0.723974  notebook  \n",
+       "1182                  INTERFERON BETA-1B  lexical    0.723974  notebook  \n",
+       "1183                 INTERFERON GAMMA-1B  lexical    0.723974  notebook  \n",
+       "1892         TECHNETIUM TC 99M SESTAMIBI  lexical    0.723974  notebook  \n",
+       "1181                  INTERFERON ALFA-2A  lexical    0.723974  notebook  \n",
+       "\n",
+       "[1921 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predictions_df = pd.DataFrame(prediction_tuples).sort_values(\"confidence\", ascending=False)\n",
     "predictions_df"
