--- a/notebooks/drug-indications.ipynb
+++ b/notebooks/drug-indications.ipynb
@@ -21,10 +21,10 @@
     "import time\n",
     "\n",
     "import pandas as pd\n",
-    "from tqdm.auto import tqdm\n",
     "from IPython.display import Markdown\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
-    "from chembl_downloader import queries, query, latest, get_date"
+    "from chembl_downloader import get_date, latest, queries, query"
    ]
   },
   {
