Improve ChEBI mapping notebook (#10)
* Add stub for checking chebi reverse mappings

* Update chebi-mappings.ipynb

* Clean up notebooks

--- a/notebooks/chebi-mappings.ipynb
+++ b/notebooks/chebi-mappings.ipynb
@@ -27,12 +27,13 @@
     "import gilda.grounder\n",
     "import gilda.term\n",
     "import pandas as pd\n",
+    "import pystow\n",
     "from biomappings.gilda_utils import iter_prediction_tuples\n",
     "from gilda.process import normalize\n",
-    "from tqdm.auto import tqdm\n",
     "from IPython.display import Markdown\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
-    "from chembl_downloader import queries, query, latest"
+    "from chembl_downloader import latest, queries, query"
    ]
   },
   {
@@ -63,7 +64,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fri Oct 28 15:16:09 2022\n"
+      "Thu Nov  3 13:32:50 2022\n"
      ]
     }
    ],
@@ -114,7 +115,7 @@
        "    chembl_id,\n",
        "    pref_name\n",
        "FROM MOLECULE_DICTIONARY\n",
-       "WHERE \n",
+       "WHERE\n",
        "    chebi_par_id IS NULL\n",
        "    AND pref_name IS NOT NULL\n",
        "```"
@@ -151,7 +152,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 2 µs, sys: 1e+03 ns, total: 3 µs\n",
-      "Wall time: 5.25 µs\n"
+      "Wall time: 5.96 µs\n"
      ]
     }
    ],
@@ -280,6 +281,85 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d9be11f",
+   "metadata": {},
+   "source": [
+    "## What's Already in ChEBI\n",
+    "\n",
+    "ChEBI also maintains its own mappings to ChEMBL - investigate if there's anything available there that is not already available in ChEMBL before moving on to propose new mappings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9d196b15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cthoyt/.virtualenvs/cheminf310/lib/python3.10/site-packages/pystow/impl.py:599: DtypeWarning: Columns (1,3,4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  return pd.read_csv(path, **_clean_csv_kwargs(read_csv_kwargs))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "34312"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chebi_url = \"https://ftp.ebi.ac.uk/pub/databases/chebi/Flat_file_tab_delimited/reference.tsv.gz\"\n",
+    "chebi_df = pystow.ensure_csv(\n",
+    "    \"bio\",\n",
+    "    \"chebi\",\n",
+    "    url=chebi_url,\n",
+    "    read_csv_kwargs=dict(\n",
+    "        compression=\"gzip\",\n",
+    "        sep=\"\\t\",\n",
+    "        encoding=\"unicode_escape\",\n",
+    "        on_bad_lines=\"skip\",\n",
+    "    ),\n",
+    ")\n",
+    "chebi_mappings = dict(\n",
+    "    chebi_df[chebi_df.REFERENCE_DB_NAME == \"ChEMBL\"][[\"REFERENCE_ID\", \"COMPOUND_ID\"]].values\n",
+    ")\n",
+    "len(chebi_mappings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "397d2fd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 4,041/39,230 (10.30%)  extra mappings from ChEBI\n"
+     ]
+    }
+   ],
+   "source": [
+    "chebi_idx = df.chembl_id.isin(set(chebi_mappings))\n",
+    "\n",
+    "print(\n",
+    "    f\"there are {chebi_idx.sum():,}/{len(df.index):,} ({chebi_idx.sum()/len(df.index):.2%}) \"\n",
+    "    f\"extra mappings from ChEBI\"\n",
+    ")\n",
+    "\n",
+    "df = df[~chebi_idx]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2c8748be",
    "metadata": {},
    "source": [
@@ -290,19 +370,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "d87f8e43",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c7a8425031c4d3395beca67e8f7b685",
+       "model_id": "8c05aef5cbe44501938ec88d5fe86ffb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/39.2k [00:00<?, ?term/s]"
+       "  0%|          | 0.00/35.2k [00:00<?, ?term/s]"
       ]
      },
      "metadata": {},
@@ -343,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "737427eb",
    "metadata": {},
    "outputs": [
@@ -351,13 +431,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: [2022-10-28 15:16:13] bioversions.sources.ols - [ypo] Missing information in OLS\n"
+      "WARNING: [2022-11-03 13:33:06] bioversions.sources.ols - [ypo] Missing information in OLS\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "baa3d7e4f93d4b70aefc7369d25050c3",
+       "model_id": "2feac003a15d478cbce97a95923aa6ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -381,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "b01f8e7f",
    "metadata": {},
    "outputs": [
@@ -389,7 +469,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got 4,720 predictions\n"
+      "Got 1,921 predictions\n"
      ]
     }
    ],
@@ -409,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "2dd1fc6a",
    "metadata": {},
    "outputs": [
@@ -448,66 +528,66 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4377</th>\n",
+       "      <th>497</th>\n",
        "      <td>chebi</td>\n",
-       "      <td>CHEBI:80180</td>\n",
-       "      <td>Indolicidin</td>\n",
+       "      <td>CHEBI:190867</td>\n",
+       "      <td>1-AMINOCYCLOBUTANE CARBOXYLIC ACID</td>\n",
        "      <td>skos:exactMatch</td>\n",
        "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL2251917</td>\n",
-       "      <td>Indolicidin</td>\n",
+       "      <td>CHEMBL131244</td>\n",
+       "      <td>1-AMINOCYCLOBUTANE CARBOXYLIC ACID</td>\n",
        "      <td>lexical</td>\n",
        "      <td>0.777778</td>\n",
        "      <td>notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3524</th>\n",
+       "      <th>904</th>\n",
        "      <td>chebi</td>\n",
-       "      <td>CHEBI:40701</td>\n",
-       "      <td>ALRESTATIN</td>\n",
+       "      <td>CHEBI:34827</td>\n",
+       "      <td>M2</td>\n",
        "      <td>skos:exactMatch</td>\n",
        "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL63055</td>\n",
-       "      <td>ALRESTATIN</td>\n",
+       "      <td>CHEMBL4525134</td>\n",
+       "      <td>M2</td>\n",
        "      <td>lexical</td>\n",
        "      <td>0.777778</td>\n",
        "      <td>notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1765</th>\n",
+       "      <th>927</th>\n",
        "      <td>chebi</td>\n",
-       "      <td>CHEBI:167900</td>\n",
-       "      <td>PJ34</td>\n",
+       "      <td>CHEBI:35811</td>\n",
+       "      <td>2-endo-hydroxy-1,8-cineole</td>\n",
        "      <td>skos:exactMatch</td>\n",
        "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL3233481</td>\n",
-       "      <td>PJ34</td>\n",
+       "      <td>CHEMBL2229602</td>\n",
+       "      <td>2-endo-hydroxy-1,8-cineole</td>\n",
        "      <td>lexical</td>\n",
        "      <td>0.777778</td>\n",
        "      <td>notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1766</th>\n",
+       "      <th>443</th>\n",
        "      <td>chebi</td>\n",
-       "      <td>CHEBI:167900</td>\n",
-       "      <td>PJ34</td>\n",
+       "      <td>CHEBI:188062</td>\n",
+       "      <td>XYLOCARPUS A</td>\n",
        "      <td>skos:exactMatch</td>\n",
        "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL372303</td>\n",
-       "      <td>PJ34</td>\n",
+       "      <td>CHEMBL3039346</td>\n",
+       "      <td>XYLOCARPUS A</td>\n",
        "      <td>lexical</td>\n",
        "      <td>0.777778</td>\n",
        "      <td>notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3520</th>\n",
+       "      <th>574</th>\n",
        "      <td>chebi</td>\n",
-       "      <td>CHEBI:40287</td>\n",
-       "      <td>7-NITROINDAZOLE</td>\n",
+       "      <td>CHEBI:192723</td>\n",
+       "      <td>L-NIO</td>\n",
        "      <td>skos:exactMatch</td>\n",
        "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL247378</td>\n",
-       "      <td>7-NITROINDAZOLE</td>\n",
+       "      <td>CHEMBL11471</td>\n",
+       "      <td>L-NIO</td>\n",
        "      <td>lexical</td>\n",
        "      <td>0.777778</td>\n",
        "      <td>notebook</td>\n",
@@ -526,20 +606,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4662</th>\n",
-       "      <td>chebi</td>\n",
-       "      <td>CHEBI:9423</td>\n",
-       "      <td>Technetium tc 99m sestamibi</td>\n",
-       "      <td>skos:exactMatch</td>\n",
-       "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL4594241</td>\n",
-       "      <td>TECHNETIUM TC 99M SESTAMIBI</td>\n",
-       "      <td>lexical</td>\n",
-       "      <td>0.723974</td>\n",
-       "      <td>notebook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3310</th>\n",
+       "      <th>852</th>\n",
        "      <td>chebi</td>\n",
        "      <td>CHEBI:32187</td>\n",
        "      <td>Technetium Tc 99m succimer</td>\n",
@@ -552,20 +619,7 @@
        "      <td>notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3774</th>\n",
-       "      <td>chebi</td>\n",
-       "      <td>CHEBI:5937</td>\n",
-       "      <td>Interferon alfa-2a</td>\n",
-       "      <td>skos:exactMatch</td>\n",
-       "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL2108508</td>\n",
-       "      <td>INTERFERON ALFA-2A</td>\n",
-       "      <td>lexical</td>\n",
-       "      <td>0.723974</td>\n",
-       "      <td>notebook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3775</th>\n",
+       "      <th>1182</th>\n",
        "      <td>chebi</td>\n",
        "      <td>CHEBI:5938</td>\n",
        "      <td>Interferon beta-1b</td>\n",
@@ -578,7 +632,7 @@
        "      <td>notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3776</th>\n",
+       "      <th>1183</th>\n",
        "      <td>chebi</td>\n",
        "      <td>CHEBI:5939</td>\n",
        "      <td>Interferon gamma-1b</td>\n",
@@ -590,55 +644,81 @@
        "      <td>0.723974</td>\n",
        "      <td>notebook</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1892</th>\n",
+       "      <td>chebi</td>\n",
+       "      <td>CHEBI:9423</td>\n",
+       "      <td>Technetium tc 99m sestamibi</td>\n",
+       "      <td>skos:exactMatch</td>\n",
+       "      <td>chembl.compound</td>\n",
+       "      <td>CHEMBL4594241</td>\n",
+       "      <td>TECHNETIUM TC 99M SESTAMIBI</td>\n",
+       "      <td>lexical</td>\n",
+       "      <td>0.723974</td>\n",
+       "      <td>notebook</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1181</th>\n",
+       "      <td>chebi</td>\n",
+       "      <td>CHEBI:5937</td>\n",
+       "      <td>Interferon alfa-2a</td>\n",
+       "      <td>skos:exactMatch</td>\n",
+       "      <td>chembl.compound</td>\n",
+       "      <td>CHEMBL2108508</td>\n",
+       "      <td>INTERFERON ALFA-2A</td>\n",
+       "      <td>lexical</td>\n",
+       "      <td>0.723974</td>\n",
+       "      <td>notebook</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4720 rows × 10 columns</p>\n",
+       "<p>1921 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     source_prefix     source_id                  source_name  \\\n",
-       "4377         chebi   CHEBI:80180                  Indolicidin   \n",
-       "3524         chebi   CHEBI:40701                   ALRESTATIN   \n",
-       "1765         chebi  CHEBI:167900                         PJ34   \n",
-       "1766         chebi  CHEBI:167900                         PJ34   \n",
-       "3520         chebi   CHEBI:40287              7-NITROINDAZOLE   \n",
-       "...            ...           ...                          ...   \n",
-       "4662         chebi    CHEBI:9423  Technetium tc 99m sestamibi   \n",
-       "3310         chebi   CHEBI:32187   Technetium Tc 99m succimer   \n",
-       "3774         chebi    CHEBI:5937           Interferon alfa-2a   \n",
-       "3775         chebi    CHEBI:5938           Interferon beta-1b   \n",
-       "3776         chebi    CHEBI:5939          Interferon gamma-1b   \n",
+       "     source_prefix     source_id                         source_name  \\\n",
+       "497          chebi  CHEBI:190867  1-AMINOCYCLOBUTANE CARBOXYLIC ACID   \n",
+       "904          chebi   CHEBI:34827                                  M2   \n",
+       "927          chebi   CHEBI:35811          2-endo-hydroxy-1,8-cineole   \n",
+       "443          chebi  CHEBI:188062                        XYLOCARPUS A   \n",
+       "574          chebi  CHEBI:192723                               L-NIO   \n",
+       "...            ...           ...                                 ...   \n",
+       "852          chebi   CHEBI:32187          Technetium Tc 99m succimer   \n",
+       "1182         chebi    CHEBI:5938                  Interferon beta-1b   \n",
+       "1183         chebi    CHEBI:5939                 Interferon gamma-1b   \n",
+       "1892         chebi    CHEBI:9423         Technetium tc 99m sestamibi   \n",
+       "1181         chebi    CHEBI:5937                  Interferon alfa-2a   \n",
        "\n",
        "             relation    target_prefix target_identifier  \\\n",
-       "4377  skos:exactMatch  chembl.compound     CHEMBL2251917   \n",
-       "3524  skos:exactMatch  chembl.compound       CHEMBL63055   \n",
-       "1765  skos:exactMatch  chembl.compound     CHEMBL3233481   \n",
-       "1766  skos:exactMatch  chembl.compound      CHEMBL372303   \n",
-       "3520  skos:exactMatch  chembl.compound      CHEMBL247378   \n",
+       "497   skos:exactMatch  chembl.compound      CHEMBL131244   \n",
+       "904   skos:exactMatch  chembl.compound     CHEMBL4525134   \n",
+       "927   skos:exactMatch  chembl.compound     CHEMBL2229602   \n",
+       "443   skos:exactMatch  chembl.compound     CHEMBL3039346   \n",
+       "574   skos:exactMatch  chembl.compound       CHEMBL11471   \n",
        "...               ...              ...               ...   \n",
-       "4662  skos:exactMatch  chembl.compound     CHEMBL4594241   \n",
-       "3310  skos:exactMatch  chembl.compound     CHEMBL1200797   \n",
-       "3774  skos:exactMatch  chembl.compound     CHEMBL2108508   \n",
-       "3775  skos:exactMatch  chembl.compound     CHEMBL1201563   \n",
-       "3776  skos:exactMatch  chembl.compound     CHEMBL1201564   \n",
+       "852   skos:exactMatch  chembl.compound     CHEMBL1200797   \n",
+       "1182  skos:exactMatch  chembl.compound     CHEMBL1201563   \n",
+       "1183  skos:exactMatch  chembl.compound     CHEMBL1201564   \n",
+       "1892  skos:exactMatch  chembl.compound     CHEMBL4594241   \n",
+       "1181  skos:exactMatch  chembl.compound     CHEMBL2108508   \n",
        "\n",
-       "                      target_name     type  confidence    source  \n",
-       "4377                  Indolicidin  lexical    0.777778  notebook  \n",
-       "3524                   ALRESTATIN  lexical    0.777778  notebook  \n",
-       "1765                         PJ34  lexical    0.777778  notebook  \n",
-       "1766                         PJ34  lexical    0.777778  notebook  \n",
-       "3520              7-NITROINDAZOLE  lexical    0.777778  notebook  \n",
-       "...                           ...      ...         ...       ...  \n",
-       "4662  TECHNETIUM TC 99M SESTAMIBI  lexical    0.723974  notebook  \n",
-       "3310   TECHNETIUM TC 99M SUCCIMER  lexical    0.723974  notebook  \n",
-       "3774           INTERFERON ALFA-2A  lexical    0.723974  notebook  \n",
-       "3775           INTERFERON BETA-1B  lexical    0.723974  notebook  \n",
-       "3776          INTERFERON GAMMA-1B  lexical    0.723974  notebook  \n",
+       "                             target_name     type  confidence    source  \n",
+       "497   1-AMINOCYCLOBUTANE CARBOXYLIC ACID  lexical    0.777778  notebook  \n",
+       "904                                   M2  lexical    0.777778  notebook  \n",
+       "927           2-endo-hydroxy-1,8-cineole  lexical    0.777778  notebook  \n",
+       "443                         XYLOCARPUS A  lexical    0.777778  notebook  \n",
+       "574                                L-NIO  lexical    0.777778  notebook  \n",
+       "...                                  ...      ...         ...       ...  \n",
+       "852           TECHNETIUM TC 99M SUCCIMER  lexical    0.723974  notebook  \n",
+       "1182                  INTERFERON BETA-1B  lexical    0.723974  notebook  \n",
+       "1183                 INTERFERON GAMMA-1B  lexical    0.723974  notebook  \n",
+       "1892         TECHNETIUM TC 99M SESTAMIBI  lexical    0.723974  notebook  \n",
+       "1181                  INTERFERON ALFA-2A  lexical    0.723974  notebook  \n",
        "\n",
-       "[4720 rows x 10 columns]"
+       "[1921 rows x 10 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
