--- a/notebooks/cortes-ciriano-refresh.ipynb
+++ b/notebooks/cortes-ciriano-refresh.ipynb
@@ -16048,7 +16048,7 @@
     "\n",
     "The comparison of the reference dataset to what's possible to get from ChEMBL 23 shows that without reproducible code for generating reference datasets, it's difficult to understand what's inside them.\n",
     "\n",
-    "Further, it shows that as time goes on and more data becomes available, that the characteristics of the dataset can potentially drastically change.\n",
+    "Further, it shows that as time goes on and more data becomes available, that the characteristics of the dataset can potentially drastically change. We suggest that rather than generating flat files that get redistributed wildly (without attribution nor provenance), that reproducible programmatic access should be used, e.g., with `chembl_downloader.contrib.get_target_smi_df`.\n",
     "\n",
     "This notebook doesn't do a careful investigation of the discrepancies between the reference dataset and the refreshed one with ChEMBL 23, nor does it do a careful investigation of the impact of arithmetic mean vs. geometric mean, but at least it's now possible to do some of these things in an automated way with `chembl-downloader`."
    ]
