--- a/notebooks/cortes-ciriano-refresh.ipynb
+++ b/notebooks/cortes-ciriano-refresh.ipynb
@@ -227,7 +227,7 @@
     "        target_chembl_id: get_target_smi_df(\n",
     "            target_chembl_id,\n",
     "            version=version,\n",
-    "            aggregate=\"mean\",\n",
+    "            aggregate=aggregate,\n",
     "            target_type=\"SINGLE PROTEIN\",\n",
     "            standard_relation=\"=\",\n",
     "            standard_type=\"IC50\",\n",
