Update to use cruft

--- a/notebooks/chebi-mappings.ipynb
+++ b/notebooks/chebi-mappings.ipynb
@@ -30,7 +30,6 @@
     "import pystow\n",
     "from biomappings.gilda_utils import iter_prediction_tuples\n",
     "from gilda.process import normalize\n",
-    "from IPython.display import Markdown\n",
     "from tqdm.auto import tqdm\n",
     "\n",
     "from chembl_downloader import latest, queries, query"
@@ -320,12 +319,12 @@
     "    \"bio\",\n",
     "    \"chebi\",\n",
     "    url=chebi_url,\n",
-    "    read_csv_kwargs=dict(\n",
-    "        compression=\"gzip\",\n",
-    "        sep=\"\\t\",\n",
-    "        encoding=\"unicode_escape\",\n",
-    "        on_bad_lines=\"skip\",\n",
-    "    ),\n",
+    "    read_csv_kwargs={\n",
+    "        \"compression\": \"gzip\",\n",
+    "        \"sep\": \"\\t\",\n",
+    "        \"encoding\": \"unicode_escape\",\n",
+    "        \"on_bad_lines\": \"skip\",\n",
+    "    },\n",
     ")\n",
     "chebi_mappings = dict(\n",
     "    chebi_df[chebi_df.REFERENCE_DB_NAME == \"ChEMBL\"][[\"REFERENCE_ID\", \"COMPOUND_ID\"]].values\n",
@@ -351,7 +350,7 @@
     "chebi_idx = df.chembl_id.isin(set(chebi_mappings))\n",
     "\n",
     "print(\n",
-    "    f\"there are {chebi_idx.sum():,}/{len(df.index):,} ({chebi_idx.sum()/len(df.index):.2%}) \"\n",
+    "    f\"there are {chebi_idx.sum():,}/{len(df.index):,} ({chebi_idx.sum() / len(df.index):.2%}) \"\n",
     "    f\"extra mappings from ChEBI\"\n",
     ")\n",
     "\n",
