--- a/notebooks/cortes-ciriano-refresh.ipynb
+++ b/notebooks/cortes-ciriano-refresh.ipynb
@@ -42,7 +42,7 @@
     "import pandas as pd\n",
     "import pystow\n",
     "import seaborn as sns\n",
-    "from matplotlib_venn import venn2, venn3\n",
+    "from matplotlib_venn import venn3\n",
     "from rdkit import Chem\n",
     "from tqdm.auto import tqdm\n",
     "\n",
@@ -6215,7 +6215,7 @@
    "source": [
     "fig, axes = plt.subplots(6, 4, figsize=(10.0, 20.0))\n",
     "\n",
-    "for (name, target_id, _), ax in zip(mappings, axes.ravel()):\n",
+    "for (name, target_id, _), ax in zip(mappings, axes.ravel(), strict=False):\n",
     "    venn3(\n",
     "        subsets=[\n",
     "            set(reference_dfs[target_id].molecule_chembl_id),\n",
@@ -15922,7 +15922,7 @@
    "source": [
     "fig, axes = plt.subplots(6, 4, figsize=(10.0, 14.0), sharex=True)\n",
     "\n",
-    "for (name, target_chembl_id, _), ax in zip(tqdm(mappings), axes.ravel()):\n",
+    "for (name, target_chembl_id, _), ax in zip(tqdm(mappings), axes.ravel(), strict=False):\n",
     "    latest_df = latest_dfs[target_chembl_id]\n",
     "    reference_df = reference_dfs[target_chembl_id]\n",
     "\n",
